Added two functions
