# static/openapi.json
@@ -2,36 +2,141 @@
   "openapi": "3.0.0",
   "info": {
     "version": "1.0.0",
-    "title": "Hello API",
-    "description": "An API to return hello in requested language"
+    "title": "Test API",
+    "description": "An API"
   },
   "paths": {
-    "/api": {
+    "/api/OpenCustomerAccount": {
+      "post": {
+        "summary": "Creates a new user.",
+        "requestBody": {
+          "description": "Creates accounts for customer with first and last names",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "firstName",
+                  "lastName"
+                ],
+                "properties": {
+                  "firstName": {
+                    "type": "string"
+                  },
+                  "lastName": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successfully created account for customer",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "value": {
+                      "type": "object",
+                      "properties": {
+                        "id": {
+                          "type": "integer",
+                          "example": 1
+                        },
+                        "firstName": {
+                          "type": "string",
+                          "example": "John"
+                        },
+                        "lastName": {
+                          "type": "string",
+                          "example": "Smith"
+                        },
+                        "account": {
+                          "type": "object",
+                          "properties": {
+                            "id": {
+                              "type": "integer",
+                              "example": 1
+                            },
+                            "accountNumber": {
+                              "type": "string",
+                              "example": "340fe77f-b9d2-46cb-9365-2e8db15a4924"
+                            },
+                            "balance": {
+                              "type": "integer",
+                              "example": 0
+                            },
+                            "status": {
+                              "type": "integer",
+                              "example": 0,
+                              "description": "0 is open, 1 is closed"
+                            }
+                          }
+                        },
+                        "statusCode": {
+                          "type": "integer",
+                          "example": 200
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Missing first or last name",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "statusCode": {
+                      "type": "integer",
+                      "example": 400
+                    },
+                    "description": {
+                      "type": "string",
+                      "example": "Invalid input of first or last name"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/CustomerDetails": {
       "get": {
         "tags": [
-          "Hello"
+          "Customer Details"
         ],
-        "description": "Returns hello in specified language",
+        "description": "Returns details about the customer",
         "parameters": [
           {
             "in": "query",
-            "name": "lang",
+            "name": "accnumber",
             "required": true,
-            "description": "language",
+            "description": "Associated Account Number",
             "schema": {
               "type": "string",
-              "example": "es"
+              "example": 1
             }
           }
         ],
         "responses": {
           "200": {
-            "description": "hello in the requested language",
+            "description": "Customer Information",
             "content": {
               "text/plain": {
                 "schema": {
                   "type": "string",
-                  "example": "hola"
+                  "example": "John Smith - Associated Account #1991919"
                 }
               }
             }
